Remove asserts from Compositor and wrap Toplevel::compositing() around Workspace::compositing()

BUG: 312712
FIXED-IN: 4.10
REVIEW: 108321